# crabdb

./: Cargo.toml  LICENSE  README.md  current.txt  customers.json  hehe.json  person.json
crates/execution/: Cargo.toml
crates/execution/src/: execution.rs  lib.rs  main.rs
crates/interpreter/: Cargo.toml
crates/interpreter/src/: interpreter.rs  main.rs
crates/parser/: Cargo.toml
crates/parser/parser/: Cargo.toml
crates/parser/parser/src/: main.rs  parser.rs
crates/parser/src/: error.rs  main.rs  parser.rs
crates/repl/: Cargo.toml
crates/repl/src/: lib.rs  main.rs  repl.rs
src/: main  main.rs
