[package]
name = "parser"
version = "0.1.0"
edition = "2021"

[lib]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = { version = "5.8.0", features = ["fancy"] }
nom = "7.1.3"
nom-supreme = "0.8.0"
nom_locate = "4.1.0"
sqlparser = "0.33.0"
syn = "2.0.15"
